# insights-sdk

./: .eslintrc.json  Dockerfile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  index.ts  insightssdk.go  mypy.ini  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build_dev_image.yml  pull_request.yml  release.yml
proto/elimity/insights/common/v1alpha1/: common.proto
proto/elimity/insights/customgateway/v1alpha1/: customgateway.proto
proto/elimity/insights/export/v1alpha1/: export.proto
src/elimity_insights_sdk/: __init__.py  _sdk.py
