[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[dependency-groups]
dev = [
    "protoletariat (>=3.3.10,<4)",
    "mypy (>=1.18.2,<2)",
    "types-protobuf (>=5.29.1.20250403,<6)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]

[project]
dependencies = [
    "connect-python (>=0.5.0,<0.6)",
]
requires-python = ">=3.10,<4"
name = "elimity-insights-sdk"
version = "1.0.0a0"

[tool.poetry]
packages = [
    { from = "gen", include = "elimity" },
    { from = "src", include = "elimity_insights_sdk" }
]
